fix: increase the gap between the links

--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -297,7 +297,7 @@ a:visited {
 }
 
 .nav li:has(a[rel="external"]) {
-    margin-inline-end: 2rem;
+    margin-inline-end: 2.5rem;
 }
 
 .nav ul ul {
